--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "eff-diceware-passphrase": "^1.0.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "lodash": "^4.17.11",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.6",
-    "morgan": "~1.8.1",
+    "morgan": "^1.9.1",
+    "mpath": "^0.6.0",
     "passport-google": "^0.3.0",
     "passport-google-oauth20": "^1.0.0",
     "serve-favicon": "^2.4.5"
