--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "bson": "^4.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "eff-diceware-passphrase": "^1.0.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "lodash": "^4.17.11",
+    "mime": "^2.4.3",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.1",
